--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,10 +39,8 @@ jobs:
         with:
           node-version: 16.x
           cache: yarn
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile --non-interactive
       - name: Build
-        run: yarn build
+        run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v1
       - name: Upload artifact
